Can delete collection from indirect linked library #62488

Closed
opened 2019-03-12 13:25:04 +01:00 by Michael Soluyanov · 5 comments

System Information
Operating system:
Graphics card:

Blender Version
Broken: 2.80, March 12, 00:20:53 - e6eb7b9cce
Worked: 2.79b release

Short description of error

Can delete collection from indirect linked library. After reloading file collection restores.

Exact steps for others to reproduce the error

test.zip

  1. Unpack files, open test_file.blend;
  2. In outliner navigate to //inner collection > Collections > Inner collection
    Снимок экрана от 2019-03-12 15-24-29.png
  3. In context menu Right click > Delete. Sub-collection will delete without any messages,
  4. Save and reload file, sub-collection will be restored
**System Information** Operating system: Graphics card: **Blender Version** Broken: 2.80, March 12, 00:20:53 - e6eb7b9ccee1 Worked: 2.79b release **Short description of error** Can delete collection from indirect linked library. After reloading file collection restores. **Exact steps for others to reproduce the error** [test.zip](https://archive.blender.org/developer/F6809762/test.zip) 1. Unpack files, open test_file.blend; 2. In outliner navigate to `//inner collection` > `Collections` > `Inner collection` ![Снимок экрана от 2019-03-12 15-24-29.png](https://archive.blender.org/developer/F6809794/Снимок_экрана_от_2019-03-12_15-24-29.png) 3. In context menu `Right click `> `Delete`. Sub-collection will delete without any messages, 4. Save and reload file, sub-collection will be restored
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2019-03-12 14:21:27 +01:00

Indeed, looks like we are missing some checks here…

Indeed, looks like we are missing some checks here…

This issue was referenced by 9778b0a5bc

This issue was referenced by 9778b0a5bc24b82b9ea32a7a28c564eec58ebc67

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62488
No description provided.