Fix T62488: Can delete collection from indirect linked library.

Same issue as with previous commits for other Collection Outlier's
operations, checks are always different though...